--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>备用域名中转中...</title>
+ <meta charset="utf-8">
+ <title>备用域名中转中...</title>
 </head>
- <script language="javascript">
-var domain = "https://www.dyuns.com";
+<h1>请稍后,即将通过备用域名中转...</h1>
+<script language="javascript">
+var domain = "www.dyuns.com";
 var src = window.location.href;
 var prtc = src.substring(0, src.indexOf(':'));
 var target = src.substring(src.indexOf('/', src.indexOf(':') + 3));
@@ -13,6 +14,5 @@ window.location.href = prtc + "://" + domain + target;
 location.href=prtc + "://" + domain + target;
 </script>
 <body>
- <h1>请稍后,即将通过备用域名中转...</h1>
 </body>
 </html>
