--- a/index.html
+++ b/index.html
@@ -1,49 +1,15 @@
-<?php 
-$scriptpath = str_replace('\\', '/', $_SERVER['SCRIPT_NAME']);
-$sitepath = substr($scriptpath, 0, strrpos($scriptpath, '/'));
-$siteurl = ($_SERVER['SERVER_PORT'] == '443' ? 'https://' : 'http://') . $_SERVER['HTTP_HOST'] . $sitepath . '/';
-if (strpos($_SERVER['HTTP_USER_AGENT'], 'QQ/') !== !1 ) {
-echo '<!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>请使用浏览器打开</title><style>.tips img{width:100%;height:auto}html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}</style></head>
-</div>
-</body>
-</html>';
-exit;
-/*
-反腾讯网址安全检测系统
-DYUNS域名网
-*/
-if($nosecu==true)return;
-//IP 屏蔽
-$iptables='977012992~977013247|977084416~977084927|1743654912~1743655935|1949957632~1949958143|2006126336~2006127359|2111446272~2111446527|3418570752~3418578943|3419242496~3419250687|3419250688~3419275263|3682941952~3682942207|3682942464~3682942719|3682986660~3682986663|1707474944~1707606015|1884967642|1884967620|1893733510|1709332858|1709318620|1709325774|1709342057|1709341968|1709330358|1709335492|1709327575|1709327041|1709318626|1709318617|1709327557|1709327573|1975065457|1902908741|1902908705|3029946827';
-$remoteiplong=bindec(decbin(ip2long(real_ip())));
-foreach(explode('|',$iptables) as $iprows){
-    if($remoteiplong==$iprows)exit('欢迎使用！');
-    $ipbanrange=explode('~',$iprows);
-    if($remoteiplong>=$ipbanrange[0] && $remoteiplong<=$ipbanrange[1])
-        exit('欢迎使用！');
-}
-//HEADER 特征屏蔽
-if(preg_match("/manager/", strtolower($_SERVER['HTTP_USER_AGENT'])) || preg_match("/QZONEJSSDK/", $_SERVER['HTTP_USER_AGENT']) || strpos($_SERVER['HTTP_USER_AGENT'], 'Mozilla')===false && strpos($_SERVER['HTTP_USER_AGENT'], 'ozilla')!==false || preg_match("/Windows NT 6.1/", $_SERVER['HTTP_USER_AGENT']) && $_SERVER['HTTP_ACCEPT']=='*/*' || preg_match("/Windows NT 5.1/", $_SERVER['HTTP_USER_AGENT']) && $_SERVER['HTTP_ACCEPT']=='*/*' || preg_match("/vnd.wap.wml/", $_SERVER['HTTP_ACCEPT']) && preg_match("/Windows NT 5.1/", $_SERVER['HTTP_USER_AGENT']) || isset($_SERVER['HTTP_REFERER']) && strpos($_SERVER['HTTP_REFERER'], 'urls.tr.com')!==false || isset($_COOKIE['ASPSESSIONIDQASBQDRC']) || empty($_SERVER['HTTP_USER_AGENT']) || preg_match("/Alibaba.Security.Heimdall/", $_SERVER['HTTP_USER_AGENT'])) {
-    exit('欢迎使用！');
-}
-if(strpos($_SERVER['HTTP_USER_AGENT'], 'iPhone OS 9_3_4')!==false && $_SERVER['HTTP_ACCEPT']=='*/*' || strpos($_SERVER['HTTP_USER_AGENT'], 'iPhone OS 8_4')!==false && $_SERVER['HTTP_ACCEPT']=='*/*' || strpos($_SERVER['HTTP_USER_AGENT'], 'Android 6.0.1')!==false && strpos($_SERVER['HTTP_USER_AGENT'], 'MQQBrowser/6.8')!==false && $_SERVER['HTTP_ACCEPT']=='*/*' || strpos($_SERVER['HTTP_ACCEPT_LANGUAGE'], 'en')!==false && strpos($_SERVER['HTTP_ACCEPT_LANGUAGE'], 'zh')===false || strpos($_SERVER['HTTP_USER_AGENT'], 'iPhone')!==false && strpos($_SERVER['HTTP_USER_AGENT'], 'en-')!==false && strpos($_SERVER['HTTP_USER_AGENT'], 'zh')===false) {
-    exit('您当前浏览器不支持或操作系统语言设置非中文，目前无法访问本站！');
-}
-}
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>即将跳转...</title>
+    <meta charset="utf-8">
+    <title>正在重定向...</title>
 </head>
- <h1>认证成功，即将重定向...</h1>
- <script language="javascript">
-var src = "https://www.dyuns.com";
-var src = window.location.href;
-</script>
+    <h1>正在前往官方网址...</h1><br/>
+    <a href="https://www.dyuns.com" target="_blank" rel="noopener noreferrer">DYUNS域名网</a><br/>
+    <br/>
+    本站由<a href="https://www.dyuns.com" target="_blank" rel="noopener noreferrer">DYUNS域名网</a>提供技术支持。<br/>
+    友情链接：<a href="https://www.dyuns.com" target="_blank" rel="noopener noreferrer">DYUNS域名网</a><br/>
+    <meta http-equiv="refresh" content="3;url=https://www.dyuns.com"> 
 <body>
 </body>
 </html>
